# CodeConCat

./: .codeconcat.yml  .codeconcat_test_security.json  .codeconcat_unsupported_files.json  .coverage.Sergeys-MacBook-Pro.local.63154.XmiBQkWx  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLI_DOCUMENTATION.md  COMMIT_MESSAGE.md  CONTRIBUTING.md  LANGUAGE_EXPANSION_IMPLEMENTATION_PLAN.md  LANGUAGE_EXPANSION_PHASE2.md  LICENSE  PARSER_FIXES_SUMMARY.md  PARSER_IMPROVEMENT_PLAN.md  README.md  THIRD_PARTY_LICENSES.md  app.py  build_crystal_grammar.py  build_wat_grammar.py  code_concat_output.md  codeconcat_enhancement_plan.md  codeconcat_feature_implementation_plan.md  codeconcat_language_expansion_guide.md  local_llm_integration_plan.md  main.py  openzeppelin_validation_report.json  pyproject.toml  pytest.ini  requirements.txt  security_module_review.md  setup.py  temp_config.yml
.github/workflows/: ci.yml
1/rules/javascript/: malicious-code.yaml
assets/: apiiro_language_coverage.md
codeconcat/: __init__.py  __main__.py  base_types.py  code_concat_output.md  constants.py  diagnostics.py  errors.py  language_map.py  main.py  quotes.py  reconstruction.py  symbol_index.py  types.py  version.py
codeconcat.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
codeconcat/ai/: __init__.py  base.py  cache.py  factory.py  key_manager.py  models_config.json  models_config.py  token_counter.py
codeconcat/api/: __init__.py  app.py  cli.py  timeout_middleware.py  validation_middleware.py
codeconcat/cli/: __init__.py  config.py  progress.py  utils.py
codeconcat/collector/: async_github_collector.py  diff_collector.py  git_client.py  github_collector.py  local_collector.py  remote_collector.py
codeconcat/config/: config_builder.py  config_loader.py  default_config.template.yml  interactive_config.py
codeconcat/parser/: debug_parsers.py  doc_comment_utils.py  doc_extractor.py  docstring_extractor.py  enable_debug.py  enhanced_parser_base.py  enhanced_pipeline.py  error_handling.py  file_parser.py  performance_optimizer.py  r_parser_patch.py  standard_parser_improvements.py  type_mapping.py  unified_pipeline.py  utils.py
codeconcat/processor/: __init__.py  attack_patterns.py  compression_processor.py  content_processor.py  external_scanners.py  security_processor.py  security_types.py  string_utils.py  summarization_processor.py  token_counter.py
codeconcat/prompts/: __init__.py  codebase_review_default.md
codeconcat/tests/: test_end_to_end.py
codeconcat/transformer/: annotator.py
codeconcat/utils/: __init__.py  cancellation.py  feature_flags.py  file_utils.py  path_security.py  security.py
codeconcat/validation/: README.md  __init__.py  async_semgrep_validator.py  integration.py  schema_validation.py  security.py  security_reporter.py  semgrep_validator.py  setup_semgrep.py  unsupported_reporter.py
codeconcat/writer/: ai_context.py  compression_helper.py  json_writer.py  markdown_writer.py  rendering_adapters.py  summary_writer.py  text_writer.py  xml_writer.py
collector/: github_collector.py
docs/: LOCAL_MODELS.md  PARSER_DETAILS.md  apiiro_language_coverage.md  doc_workflows.md  reconstruction.md  security_processor.md  tests.md
parser/: doc_extractor.py
parser/language_parsers/: js_ts_parser.py  r_parser.py
parser_reviews/: 01_base_parsers_review.md  02_standard_parsers_review.md  04_comprehensive_tree_parsers_review.md
scripts/: README.md  analyze_doc_comments_ast.py  analyze_struct_ast.py  debug_crystal_ast_details.py  debug_crystal_grammar.py  debug_crystal_test_cases.py  debug_elixir_grammar.py  debug_generic_ast.py  debug_generic_test.py  debug_init_function.py  debug_inline_for.py  debug_suspend_resume.py  explore_zig_ast.py  inspect_glsl_grammar.py  inspect_hlsl_grammar.py  simple_solidity_test.py  solidity_performance_benchmark.py  solidity_security_patterns.py  sync_version.py  test_elixir_query.py  test_glsl_query.py  test_query_syntax.py  test_sql_advanced.py  test_sql_grammar.py  test_sql_parser_basic.py  test_zig_grammar.py  test_zig_grammar2.py  test_zig_parser_simple.py  test_zig_queries.py  test_zig_queries2.py  test_zig_query_api.py  validate_solidity_openzeppelin.py  verify_grammars.sh
test_codeconcat/code/: sample.py
test_codeconcat/docs/: README.md
test_dir/: app.py
tests/: conftest.py  parser_fixes_test.py  parser_performance.py  test_annotator.py  test_codeconcat.py  test_content_processor.py  test_cpp_parser.py  test_github_collector.py  test_go_parser.py  test_integration.py  test_java_parser.py  test_js_ts_parser.py  test_julia_parser.py  test_local_collector.py  test_php_parser.py  test_python_parser.py  test_r_parser.py  test_rust_parser.py  test_symbol_index.py  test_version.py
tests/cli/: CLI_TESTING_REPORT.md  cli_test_runner.py  test_config_command.py  test_diagnose_command.py  test_run_command.py
tests/integration/: debug_parser.py  test_ai_key_integration.py  test_ai_summary_formats.py  test_ai_summary_generation.py  test_all_parsers.py  test_all_tree_sitter_parsers.py  test_compression_integration.py  test_compression_token_counting.py  test_dart_corpus.py  test_diff_functionality.py  test_end_to_end.py  test_end_to_end_validation.py  test_graphql_integration.py  test_hcl_corpus.py  test_julia_parametric_types.py  test_kotlin_corpus.py  test_meta_overview.py  test_parser_diagnostics.py  test_parsers_functionality.py  test_r_s3_s4_detection.py  test_reconstruction_roundtrip.py  test_repository_validation.py  test_solidity_corpus.py  test_special_file_types.py  test_sql_corpus.py  test_terraform_registry_validation.py  test_unified_pipeline_merging.py
tests/parser_test_corpus/: README.md  test_cpp_sample.cpp
tests/unit/: test_cli_improvements.py  test_diagnostics_simple.py  test_errors.py  test_language_map.py  test_main_module.py  test_main_simple.py  test_path_security_adversarial.py  test_quotes.py  test_reconstruction.py  test_reconstruction_simple.py
tools/: check_tree_sitter.py  standalone_verify.py  verify_dependencies.py
writer/: json_writer.py  markdown_writer.py
(+235 files in other folders)
