[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codeconcat"
dynamic = ["version"]
description = "An LLM-friendly code aggregator and documentation extractor"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["llm", "code", "documentation", "aggregator"]
authors = [
    { name = "CodeConcat Team", email = "team@codeconcat.dev" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "pyyaml>=6.0",
    "pyperclip>=1.8.2",
    "pygithub>=2.1.1",
    "tiktoken>=0.5.1",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
guesslang = [
    "guesslang>=2.2.0",
]

[project.urls]
Homepage = "https://github.com/biostochastics/codeconcat"
Documentation = "https://github.com/biostochastics/codeconcat#readme"
Issues = "https://github.com/biostochastics/codeconcat/issues"
Changelog = "https://github.com/biostochastics/codeconcat/blob/main/CHANGELOG.md"

[project.scripts]
codeconcat = "codeconcat.main:cli_entry_point"

[tool.hatch.version]
path = "codeconcat/version.py"

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.pytest.ini_options]
addopts = "-ra -q --cov=codeconcat --cov-report=term-missing"
testpaths = ["tests"]
