[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codeconcat"
dynamic = ["version"]
description = "An LLM-friendly code aggregator and documentation extractor"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["llm", "code", "documentation", "aggregator"]
authors = [
    { name = "Sergey Kornilov", email = "sergey.kornilov@biostochastics.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    
    "pyperclip>=1.8.2",
    "tiktoken>=0.5.1",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "tqdm>=4.62.0", # Added for progress bars
    "pathspec>=0.11.0", # Added for gitignore pattern matching
    "halo>=0.0.31", # Added for spinners
    "transformers>=4.20.0", # Added for token counting
    "semgrep>=1.0.0", # Added for external security scanning
    "pydantic>=2.0.0,<3.0.0",
    "httpx",
    "gitpython>=3.1.30",
    "python-multipart",
    "tree-sitter>=0.20.7,<0.25.0",
    "tree-sitter-language-pack>=0.7.2",
    "requests>=2.20.0,<3.0.0",
    "tomli",
    "jsonschema",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0", # Added linter/formatter
]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.1",
    "pytest-mock>=3.11.1",
]
guesslang = [
    "guesslang>=2.2.0",
]

[project.urls]
Homepage = "https://github.com/biostochastics/codeconcat"
Documentation = "https://github.com/biostochastics/codeconcat#readme"
Issues = "https://github.com/biostochastics/codeconcat/issues"
Changelog = "https://github.com/biostochastics/codeconcat/blob/main/CHANGELOG.md"

[project.scripts]
codeconcat = "codeconcat.main:cli_entry_point"
codeconcat-api = "codeconcat.api.cli:cli_entry_point"

[tool.hatch.version]
path = "codeconcat/version.py"

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.pytest.ini_options]
addopts = "-ra -q --cov=codeconcat --cov-report=term-missing"
testpaths = ["tests"]
